--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      
       <section class="top-logo">
         <div class="arch-logo">
-          <a href="/component/pages/index.html"><img class="arch-image" src="/component/assets/logo.svg" alt=""></a>
+          <a href=""><img class="arch-image" src="/component/assets/logo.svg" alt=""></a>
        </div>
       </section>
                   <!-- navigation bar -->
@@ -32,9 +32,9 @@
         </div>
      
           <nav class="link-tab menu-tab">
-          <a href="/component/pages/portfolio.html" class="mob-list-item" target="_blank">Portfolio</a>
-          <a href="/component/pages/about.html" class="mob-list-item" target="_blank">About Us</a>
-          <a href="/component/pages/contact.html" class="mob-list-item" target="_blank">Contact</a>
+          <a href="/component/pages/portfolio.html" class="mob-list-item">Portfolio</a>
+          <a href="/component/pages/about.html" class="mob-list-item">About Us</a>
+          <a href="/component/pages/contact.html" class="mob-list-item">Contact</a>
         </nav>
       </section>
 
