--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <!-- Welcome to Arch Studio Content  -->
 
       <article class="hero-welcome">
-        <span>Welcome</span>
+        <p>Welcome</p>
       </article>
       <svg class="rectangle" width="65" height="1" viewBox="0 0 65 1" fill="none" xmlns="http://www.w3.org/2000/svg">
         <rect width="65" height="1" fill="#C8CCD8"/>
